syntax = "proto3";

import "MediaMessages.proto";

package nl.amony.service.media.api;

service MediaService {

  rpc getById(GetById) returns (Media) { }

  rpc getAll(GetAllMedia) returns (stream Media) { }

  rpc upsertMedia(Media) returns (Media) { }

  rpc deleteById(DeleteById) returns (DeleteByIdResponse) { }

  rpc updateMediaMeta(UpdateMediaMeta) returns (Media) { }
}

message DeleteByIdResponse { }

message MediaDeleted {
  string mediaId = 1;
}

message GetById {
  string mediaId = 1;
}

message DeleteById {
  string mediaId = 1;
}

message GetAllMedia { }

